fixed createdOn date and time font size on smaller screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -82,3 +82,9 @@ body {
 	}
 }
 
+@media (max-width: 715px) {
+	.createdOn {
+		font-size: 1rem;
+	}
+}
+
