--- a/src/styles/_listOfNotes.scss
+++ b/src/styles/_listOfNotes.scss
@@ -65,5 +65,6 @@ opacity: .8;
 font-family: 'IBM Plex Mono', sans-serif;
 font-weight: 900;
 color: ghostwhite;
+transition: all .4s ease;
 	}
 
